Compatible for Android

--- a/config/loganalysis.properties
+++ b/config/loganalysis.properties
@@ -7,8 +7,10 @@ db.username=root
 db.pwd=devabase
 db.schema=XXX
 db.mysqlclass=com.mysql.jdbc.Driver
-db.scriptfile=scripts/dbquery_chr.txt
-db.masterdbname=chr_reviews
-db.batchcount=1000
-log.name=review_log
-log.importqueryfile=scripts/insquery_chr.txt
+db.scriptfile=scripts/dbquery_adr.txt
+db.masterdbname=adr_reviews
+db.batchcount=500
+log.name=adr_log
+log.importqueryfile=scripts/insquery_qt.txt
+log.analysisqueryfile=scripts/insquery_analysis_qt.txt
+log.analysistablefile=scripts/dbquery_analysis.txt
